force-app/main/default/objects/Account/fields/CC_Dismissal_Reason__c.field-meta.xml
<CustomField>
    <fullName>CC_Dismissal_Reason__c</fullName>
    <label>Dismissal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;Registration / License Suspended</fullName>
            </value>
            <value>
                <fullName>Non-Compliance With Agreement Terms</fullName>
            </value>
            <value>
                <fullName>Non-Compliance With Child Care Plan Authorization</fullName>
            </value>
            <value>
                <fullName>Lack Of Certification By Regulating Authority</fullName>
            </value>
            <value>
                <fullName>Duplicate Provider - No longer Active</fullName>
            </value>
            <value>
                <fullName>Quit - Provider Informed Licensing Office</fullName>
            </value>
            <value>
                <fullName>Provider Deceased</fullName>
            </value>
            <value>
                <fullName>Registration / License Expired - Not Renewed</fullName>
            </value>
            <value>
                <fullName>Registration / License Revoked</fullName>
            </value>
            <value>
                <fullName>Provider Withdrew Application</fullName>
            </value>
            <value>
                <fullName>Application Not Completed / Not Attend Orientation&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>