force-app/main/default/objects/Account/fields/CC_Disqualified_child_care_assistance__c.field-meta.xml
<CustomField>
    <fullName>CC_Disqualified_child_care_assistance__c</fullName>
    <label>Disqualified child care assistance?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>