force-app/main/default/objects/Account/fields/CC_Do_not_need_care_assistance__c.field-meta.xml
<CustomField>
    <fullName>CC_Do_not_need_care_assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate need child care or not</description>
    <label>Do not need care assistance</label>
    <type>Checkbox</type>
</CustomField>