force-app/main/default/objects/Account/fields/CC_Do_you__c.field-meta.xml
<CustomField>
    <fullName>CC_Do_you__c</fullName>
    <label>Do you ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Own this location</fullName>
            </value>
            <value>
                <fullName>Rent this location</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>