force-app/main/default/objects/Account/fields/CC_Do_you_have_a_business_name__c.field-meta.xml
<CustomField>
    <fullName>CC_Do_you_have_a_business_name__c</fullName>
    <label>Do you have a business name?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>