force-app/main/default/objects/Account/fields/CC_Do_you_have_Child_Support_paid_out__c.field-meta.xml
<CustomField>
    <fullName>CC_Do_you_have_Child_Support_paid_out__c</fullName>
    <label>Do you have Child Support paid out?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>