force-app/main/default/objects/Account/fields/CC_Do_you_have_Fire_Marshal_Certificate__c.field-meta.xml
<CustomField>
    <fullName>CC_Do_you_have_Fire_Marshal_Certificate__c</fullName>
    <label>Do you have Fire Marshal Certification?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>