force-app/main/default/objects/Account/fields/CC_Do_you_live_in_an__c.field-meta.xml
<CustomField>
    <fullName>CC_Do_you_live_in_an__c</fullName>
    <label>Do you live in an</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Mobile Home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>