force-app/main/default/objects/Account/fields/CC_Do_you_live_in_an_Other__c.field-meta.xml
<CustomField>
    <fullName>CC_Do_you_live_in_an_Other__c</fullName>
    <label>Do you live in an Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>