force-app/main/default/objects/Account/fields/CC_Do_you_need_an_interpreter__c.field-meta.xml
<CustomField>
    <fullName>CC_Do_you_need_an_interpreter__c</fullName>
    <label>Do you need an interpreter?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>