force-app/main/default/objects/Account/fields/CC_DOB_Verify_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_DOB_Verify_Date__c</fullName>
    <label>DOB Verify Date</label>
    <type>Date</type>
</CustomField>