force-app/main/default/objects/Account/fields/CC_DOB_Verify_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_DOB_Verify_Type__c</fullName>
    <label>DOB Verify Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copied From CHIMES</fullName>
            </value>
            <value>
                <fullName>Online Application</fullName>
            </value>
            <value>
                <fullName>Collateral Contact</fullName>
            </value>
            <value>
                <fullName>Client Statement</fullName>
            </value>
            <value>
                <fullName>Hard Copy (Birth Certificate)</fullName>
            </value>
            <value>
                <fullName>Agency Verified</fullName>
            </value>
            <value>
                <fullName>Birth Certificate</fullName>
            </value>
            <value>
                <fullName>Copied From TEAMS</fullName>
            </value>
            <value>
                <fullName>Not Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>