force-app/main/default/objects/Account/fields/CC_Does_business_use_fictitious_name__c.field-meta.xml
<CustomField>
    <fullName>CC_Does_business_use_fictitious_name__c</fullName>
    <description>Indicates if business has ficticious name ( Yes/No )</description>
    <label>Does your business use fictitious name?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>