force-app/main/default/objects/Account/fields/CC_E_Verify_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_E_Verify_Number__c</fullName>
    <label>E-Verify Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>