force-app/main/default/objects/Account/fields/CC_Emergency_medical_authorization_sign__c.field-meta.xml
<CustomField>
    <fullName>CC_Emergency_medical_authorization_sign__c</fullName>
    <inlineHelpText>Does the provider have an emergency medical authorization form signed by the parent?</inlineHelpText>
    <label>Emergency medical authorization signed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>