force-app/main/default/objects/Account/fields/CC_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>CC_Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
            <value>
                <fullName>Not Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>American Indian or Alaska Native</fullName>
                <isActive>false</isActive>
                <label>American Indian or Alaska Native</label>
            </value>
            <value>
                <fullName>Asian</fullName>
                <isActive>false</isActive>
                <label>Asian</label>
            </value>
            <value>
                <fullName>Black or African American</fullName>
                <isActive>false</isActive>
                <label>Black or African American</label>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                <isActive>false</isActive>
                <label>Native Hawaiian or Other Pacific Islander</label>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
                <isActive>false</isActive>
                <label>Prefer not to answer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>