force-app/main/default/objects/Account/fields/CC_Ever_gone_by_a_different_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Ever_gone_by_a_different_Last_Name__c</fullName>
    <inlineHelpText>Last Name (fill if Household member has permanent or temporary different last name)</inlineHelpText>
    <label>Ever gone by a different Last Name?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>