force-app/main/default/objects/Account/fields/CC_Ever_gone_by_a_different_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Ever_gone_by_a_different_Middle_Name__c</fullName>
    <inlineHelpText>Middle Name (fill if Household member has permanent or temporary different middle name)</inlineHelpText>
    <label>Ever gone by a different Middle Name?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>