force-app/main/default/objects/Account/fields/CC_Ever_gone_by_a_different_Suffix__c.field-meta.xml
<CustomField>
    <fullName>CC_Ever_gone_by_a_different_Suffix__c</fullName>
    <inlineHelpText>Suffix (fill if Household member has permanent or temporary different Suffix)</inlineHelpText>
    <label>Ever gone by a different Suffix?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>