force-app/main/default/objects/Account/fields/CC_Expected_Year_of_Graduation__c.field-meta.xml
<CustomField>
    <fullName>CC_Expected_Year_of_Graduation__c</fullName>
    <label>Expected Year of Graduation</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>