force-app/main/default/objects/Account/fields/CC_Experiencing_Homelessness__c.field-meta.xml
<CustomField>
    <fullName>CC_Experiencing_Homelessness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experiencing Homelessness?</label>
    <type>Checkbox</type>
</CustomField>