force-app/main/default/objects/Account/fields/CC_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>