force-app/main/default/objects/Account/fields/CC_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_External_Id__c</fullName>
    <label>External Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>