force-app/main/default/objects/Account/fields/CC_Facility_Directions__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Directions__c</fullName>
    <label>Facility Directions</label>
    <type>TextArea</type>
</CustomField>