force-app/main/default/objects/Account/fields/CC_Facility_Director__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Director__c</fullName>
    <description>Stores point in time name of facility director (Can be replaced with formula)</description>
    <label>Facility Director</label>
    <length>255</length>
    <type>Text</type>
</CustomField>