force-app/main/default/objects/Account/fields/CC_Facility_Eligible_Prospective_payment__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Eligible_Prospective_payment__c</fullName>
    <label>Facility Eligible Prospective payment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>