force-app/main/default/objects/Account/fields/CC_Facility_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Phone_Number__c</fullName>
    <label>Facility Phone Number</label>
    <type>Phone</type>
</CustomField>