force-app/main/default/objects/Account/fields/CC_Facility_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Status__c</fullName>
    <description>Indicates status of license against a facility/home</description>
    <label>License Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Terminated</fullName>
                <isActive>false</isActive>
                <label>Terminated</label>
            </value>
            <value>
                <fullName>Termination Initiated</fullName>
                <isActive>false</isActive>
                <label>Termination Initiated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>