force-app/main/default/objects/Account/fields/CC_Facility_Subsidy_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Subsidy_Status__c</fullName>
    <label>Subsidy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Termination Initiated</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>