force-app/main/default/objects/Account/fields/CC_Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Facility_Type__c</fullName>
    <description>Stores type of facility against a business</description>
    <label>Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Child Care Center</fullName>
            </value>
            <value>
                <fullName>Group Home Child Care</fullName>
            </value>
            <value>
                <fullName>Family Home</fullName>
            </value>
            <value>
                <fullName>Friend, Family, Neighbor (FFN) Provider</fullName>
            </value>
            <value>
                <fullName>Relative Care Exempt (RCE) Provider</fullName>
            </value>
            <value>
                <fullName>Drop In</fullName>
            </value>
            <value>
                <fullName>School Age</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>