force-app/main/default/objects/Account/fields/CC_Family_Association_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Family_Association_Type__c</fullName>
    <label>Family Association Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>