force-app/main/default/objects/Account/fields/CC_Federal_Report_ID__c.field-meta.xml
<CustomField>
    <fullName>CC_Federal_Report_ID__c</fullName>
    <label>Federal Report ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>