force-app/main/default/objects/Account/fields/CC_Fictitious_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Fictitious_Name__c</fullName>
    <description>Stores ficticious name</description>
    <label>Fictitious Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>