force-app/main/default/objects/Account/fields/CC_FIEN__c.field-meta.xml
<CustomField>
    <fullName>CC_FIEN__c</fullName>
    <description>Stores FIEN number</description>
    <label>FIEN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>