force-app/main/default/objects/Account/fields/CC_First_Time_Accessed__c.field-meta.xml
<CustomField>
    <fullName>CC_First_Time_Accessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Time Accessed</label>
    <type>Checkbox</type>
</CustomField>