force-app/main/default/objects/Account/fields/CC_Gross_Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>CC_Gross_Monthly_Amount__c</fullName>
    <label>Gross Monthly Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>