force-app/main/default/objects/Account/fields/CC_Has_this_member_earned_a_degree__c.field-meta.xml
<CustomField>
    <fullName>CC_Has_this_member_earned_a_degree__c</fullName>
    <inlineHelpText>Has this household member earned a degree?</inlineHelpText>
    <label>Has this member earned a degree?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>