force-app/main/default/objects/Account/fields/CC_Have_Over_1M_Assets__c.field-meta.xml
<CustomField>
    <fullName>CC_Have_Over_1M_Assets__c</fullName>
    <label>Have Over $1M Assets?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>