force-app/main/default/objects/Account/fields/CC_Have_you_been_approved_provide_care__c.field-meta.xml
<CustomField>
    <fullName>CC_Have_you_been_approved_provide_care__c</fullName>
    <inlineHelpText>Have you been approved, in any capacity, to provide care in a child care facility?</inlineHelpText>
    <label>Have you been approved to provide care?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>