force-app/main/default/objects/Account/fields/CC_Head_Start_Early_Head_Start_Program__c.field-meta.xml
<CustomField>
    <fullName>CC_Head_Start_Early_Head_Start_Program__c</fullName>
    <description>Are you a Head Start or Early Head Start Program Participant?</description>
    <label>Head Start or Early Head Start Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>