force-app/main/default/objects/Account/fields/CC_Highest_Level_Edu_Verification_Reason__c.field-meta.xml
<CustomField>
    <fullName>CC_Highest_Level_Edu_Verification_Reason__c</fullName>
    <label>Highest Level Edu Verification Reason</label>
    <type>TextArea</type>
</CustomField>