force-app/main/default/objects/Account/fields/CC_Hispanic_or_Latino_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>CC_Hispanic_or_Latino_Ethnicity__c</fullName>
    <label>Hispanic or Latino Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>