force-app/main/default/objects/Account/fields/CC_Immunization_Verification_Complete_Dt__c.field-meta.xml
<CustomField>
    <fullName>CC_Immunization_Verification_Complete_Dt__c</fullName>
    <label>Immunization Verification Complete Dat</label>
    <type>Date</type>
</CustomField>