force-app/main/default/objects/Account/fields/CC_Is_a_fire_extinguisher_available__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_a_fire_extinguisher_available__c</fullName>
    <description>Is a fire extinguisher available?</description>
    <inlineHelpText>Is a fire extinguisher available?</inlineHelpText>
    <label>Is a fire extinguisher available?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>