force-app/main/default/objects/Account/fields/CC_Is_Child__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Child</label>
    <type>Checkbox</type>
</CustomField>