force-app/main/default/objects/Account/fields/CC_Is_Complaint_Participant__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_Complaint_Participant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Complaint Participant?</label>
    <type>Checkbox</type>
</CustomField>