force-app/main/default/objects/Account/fields/CC_Is_fictitious_name_registered_wit_SOS__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_fictitious_name_registered_wit_SOS__c</fullName>
    <description>Indicates if name registered with the secretary of state ( Yes/No )</description>
    <label>Is fictitious name registered with SOS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>