force-app/main/default/objects/Account/fields/CC_Is_Highest_Level_of_Edu_Verified__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_Highest_Level_of_Edu_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Highest Level of Education Verified</label>
    <type>Checkbox</type>
</CustomField>