force-app/main/default/objects/Account/fields/CC_Is_member_enrolled_as_Tribal_member__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_member_enrolled_as_Tribal_member__c</fullName>
    <inlineHelpText>Is this member enrolled as a Tribal member?</inlineHelpText>
    <label>Is member enrolled as Tribal member?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>