force-app/main/default/objects/Account/fields/CC_Is_Rented__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_Rented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rented</label>
    <type>Checkbox</type>
</CustomField>