force-app/main/default/objects/Account/fields/CC_Is_this_person_a_Montana_Resident__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_this_person_a_Montana_Resident__c</fullName>
    <label>Is this person a Montana Resident?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>