force-app/main/default/objects/Account/fields/CC_Last_day_of_school__c.field-meta.xml
<CustomField>
    <fullName>CC_Last_day_of_school__c</fullName>
    <label>Last day of school?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>