force-app/main/default/objects/Account/fields/CC_Last_Physical_Exam_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Last_Physical_Exam_Verification_Date__c</fullName>
    <label>Last Physical Exam Verification Date</label>
    <type>Date</type>
</CustomField>